--- a/Permasalahan-ADM-Case-01-EDA.ipynb
+++ b/Permasalahan-ADM-Case-01-EDA.ipynb
@@ -122,8 +122,7 @@
       "source": [
         "# Loading Data:\n",
         "\n",
-        "# TBA\n",
-        "#halooooooo"
+        "# TBA\n"
       ]
     }
   ],
